# minink

./: .env  Cargo.toml  sqlx-data.json
minink-agent/: .env  Cargo.toml  README.md  sqlx-data.json
minink-agent/assets/: index.html  script.js
minink-agent/migrations/: 20230324194644_create-logs-table.sql  20230329183937_use-fts.sql
minink-agent/src/: database.rs  journald.rs  lib.rs  logdispatcher.rs  logstream.rs  main.rs  server.rs  websocket.rs
minink-common/: Cargo.toml
minink-common/src/: lib.rs
minink-tui/: Cargo.toml
minink-tui/src/: app.rs  main.rs  ui.rs
minink-web/: Cargo.toml  index.html
minink-web/src/: app.rs  form.rs  logtable.rs  main.rs
src/: main.rs
