[package]
name = "minink-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.1", features = ["derive"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
rand = "0.8"
ratatui = "0.20"
crossterm = { version = "0.26", "features" = ["event-stream"] }
minink-common = { path = "../minink-common/" }
tokio = { version = "1.25", features = ["full"] }
futures = "0.3"
futures-timer = "3.0"
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
