[package]
name = "minink-web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
yew = { version = "0.20", features = ["csr"] }
yew-websocket = "0.2"
gloo-net = "0.2.6"
gloo-console = "0.2.3"
minink-common = { path = "../minink-common/" }
serde = { version = "1.0.159", features = ["derive"] }
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Location",
    "UrlSearchParams",
]

