[package]
name = "minink-web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
yew = { version = "0.20", features = ["csr"] }
gloo-net = "0.2"
gloo-console = "0.2"
minink-common = { path = "../minink-common/" }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Location",
    "UrlSearchParams",
]

